bad/field_access_non_class_type_null.example_compiler_output
ERROR
[1mbad/field_access_non_class_type_null.lat:3:6: [1;31merror: [0;1mtype `null` has no fields[m
	null.size;
	    [1;32m^[m
